# tzb-mmrotate

configs/oriented_rcnn/: orcnn-cascade-le90_r50_atss_1x_tzb-ship.py  orcnn-cascade-le90_r50_fpn_1x_tzb-ship.py  orcnn-cascade-le90_swin-tiny_fpn_1x_tzb-ship.py  orcnn-cascade-le90_van-base_fpn_1x_tzb-ship.py  orcnn-cascade_swin_tiny_1x_tzb-ship-balance.py  oriented-cascade-rcnn-le90_r50_fpn_1x_dota.py  oriented-cascade-rcnn-le90_van_fpn_1x_dota.py  oriented-rcnn-le90_r50_fpn_1x_dota.py  oriented-rcnn-le90_r50_fpn_1x_tzb-ship.py  oriented-rcnn-le90_van-base_fpn_1x_dota.py  oriented-rcnn-le90_van-base_fpn_1x_fp16_tzb-ship.py  oriented-rcnn-le90_van-base_fpn_1x_tzb-ship.py
configs/roi_trans/: roi-trans-le90_r50_fpn_1x_tzb-ship.py  roi-trans-le90_swin-tiny_fpn_1x_dota.py  roi-trans-le90_swin-tiny_fpn_1x_tzb_ship.py
configs/rotated_fcos/: rotated-fcos-hbox-le90_r50_fpn_1x_tzb-plane.py
configs/rotated_rtmdet/: rotated_rtmdet_l-3x-dota_ms.py  rotated_rtmdet_l-coco_pretrain-3x-dota_ms.py  rotated_rtmdet_l_tzb-plane_ms.py  rotated_rtmdet_l_tzb-ship.py  rotated_rtmdet_l_tzb-ship_ms.py  rotated_rtmdet_l_tzb_plane_ms.py  rotated_rtmdet_l_tzb_ship_ms.py  rotated_rtmdet_m-coco_pretrain-3x-dota_ms.py  rotated_rtmdet_m_tzb-ship.py  rotated_rtmdet_m_tzb-ship_ms.py
configs/s2anet/: s2anet-le90_r50_fpn_1x_tzb-plane.py
docker/: Dockerfile
mmrotate/: registry.py
mmrotate/apis/: inference.py
mmrotate/datasets/: dota.py  (+3 more)
my_exps/: test.sh  train.sh
requirements/: build.txt
tools/: test.py
tools/data/tzb-dota/c_exec/: CMakeLists.txt
tools/data/tzb-dota/c_exec/src/: main.cc
(+23 files in other folders)
